[package]
name = "hlbc-python"
version = "0.5.0"
edition = "2018"

[lib]
name = "hlbc"
crate-type = ["cdylib"]

[dependencies]
hlbc-decompiler = "0.7.0"
lazy_static = "1.5.0"
hlbc = { git = "https://github.com/N3rdL0rd/hlbc.git", branch = "clone" }

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]

[patch.crates-io]
hlbc = { git = "https://github.com/N3rdL0rd/hlbc.git", branch = "clone" }